# rf_impedance_matching_tool

./: .gitignore  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL_BACKUP.md  Makefile  README.md  cascaded.s2p  pyproject.toml  result.txt
.specify/memory/: constitution.md
docs/: API.md  ARCHITECTURE.md  DEBUGGING.md  QUICKSTART.md
docs/examples/: README.md  cap_10pF.s2p  ind_4n7.s2p  wifi_antenna.s2p
specs/001-rf-impedance-optimizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rf-impedance-optimizer/checklists/: requirements.md
specs/001-rf-impedance-optimizer/contracts/: cli-interface.md  core-api.md
specs/001-snp-matching-optimization/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-snp-matching-optimization/checklists/: requirements.md
specs/001-snp-matching-optimization/contracts/: grid_optimizer.md  smith_chart.md  touchstone_parser.md
src/snp_tool/: __init__.py  controller.py  main.py
src/snp_tool/cli/: commands.py  progress.py
src/snp_tool/core/: __init__.py  component_lib.py
src/snp_tool/export/: __init__.py  config_export.py  snp_export.py
src/snp_tool/gui/: __init__.py  app.py
src/snp_tool/models/: __init__.py  component.py  component_library.py  frequency.py  matching_network.py  network.py  optimization_result.py  port_config.py  session.py  snp_file.py  solution.py
src/snp_tool/optimizer/: __init__.py  bandwidth_optimizer.py  cascader.py  engine.py  grid_search.py  metrics.py  objectives.py
src/snp_tool/parsers/: __init__.py  component_library.py  touchstone.py
src/snp_tool/utils/: engineering.py  (+4 more)
tests/fixtures/: sample_device.s2p
tests/integration/: test_cli_commands.py  test_end_to_end_optimization.py  test_full_workflow.py
tests/performance/: benchmark_load.py  benchmark_optimize.py  benchmark_search.py
tests/unit/: test_bandwidth_optimizer.py  test_cascader.py  test_component_lib.py  test_component_parser.py  test_controller.py  test_edge_cases.py  test_engineering_notation.py  test_export.py  test_metrics.py  test_models.py  test_optimizer_objectives.py  test_project_setup.py  test_rectangular_plots.py  test_session_io.py  test_smith_chart_widget.py  test_snp_validator.py  test_touchstone_parser.py
(+10 files in other folders)
